# atcode

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_CN.md  atcode.sh  pyproject.toml  requirements.txt
backend/: __init__.py
backend/agent/: __init__.py  llm.py  model_registry.py
backend/agent/orchestrators/: __init__.py  chat.py  chat_session.py  chat_workflow.py  context.py  doc.py  doc_run_store.py  shared.py
backend/agent/tools/: __init__.py  code_tools.py  graph_query.py  management_tools.py  paper_tools.py  semantic_search.py  tool_registry.py
backend/api/: __init__.py  cors.py  dependencies.py  main.py  orchestrator_pool.py  run.py
backend/api/middleware/: __init__.py  auth.py
backend/api/models/: __init__.py  folders.py  request.py  response.py
backend/api/routes/: __init__.py  chat.py  config.py  debug.py  docs.py  feedback.py  folders.py  graph.py  health.py  mcp_sse.py  overview.py  papers.py  sync.py  (+4 more)
backend/atlas_mcp/: __init__.py  __main__.py  server.py  skill.md
backend/core/: __init__.py  config.py  dependencies.py  file_lock.py  fqn_resolver.py  fs_utils.py  git_executable.py  gitignore_parser.py  language_config.py  language_detection.py  logger.py  prompts.py  provider_utils.py  schemas.py  source_extraction.py
backend/graph/: __init__.py  embedder.py  loader.py  service.py  updater.py
backend/paper/: __init__.py  doc_generator.py  downloader.py  github_extractor.py  hf_crawler.py  models.py  pdf_parser.py  pipeline.py  search.py
backend/parser/: __init__.py  factory.py  loader.py  utils.py
backend/tests/: __init__.py  test_call_resolution.py  test_config_paths.py  test_cors.py  test_doc_generation_timeouts.py  test_doc_run_store.py  test_fs_utils_walk_files.py  test_variable_update.py
docker/: Dockerfile.backend  Dockerfile.frontend  compose.full.yaml  compose.yaml
docs/: TECHNICAL_DETAILS.md
frontend/: next.config.ts  package-lock.json  package.json  start.js
frontend/app/: design-tokens.css  globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  Card.tsx  ContextMenu.tsx  CreateFolderModal.tsx  DockableLayout.tsx  DockedPanels.tsx  DragHandle.tsx  DropdownMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  FloatingChatWidget.tsx  FloatingFeedbackWidget.tsx  FloatingRepoViewer.tsx  FolderBreadcrumb.tsx  GitBranchSelector.tsx  GlobalChatProvider.tsx  GlobalTaskMonitor.tsx  InteractiveMermaidDiagram.tsx  LanguageSwitcher.tsx  LassoSelector.tsx  Modal.tsx  ModelCombobox.tsx  MoveDocumentModal.tsx  OverviewDocV2.tsx  PageShellSidebar.tsx  RepoViewer.tsx  SelectionToolbar.tsx  Skeleton.tsx  SyncPanel.tsx  TaskStatusPanel.tsx  ThemeErrorBoundary.tsx  Toast.tsx  TraceViewer.tsx  WikiDoc.tsx
frontend/lib/: api-client.ts  api-config.ts  auth.ts  chat-stream-manager.ts  database.ts  dock-context.tsx  export-utils.ts  file-lock.ts  graph-api.ts  graph-cache.ts  hooks.ts  i18n.tsx  layout-tree.ts  model-config.ts  page-shell-context.tsx  papers-api.ts  paths.ts  repo-viewer-context.tsx  responsive.ts  store.ts  sync-api.ts  syntax-theme.ts  theme-colors.ts  theme-context.tsx  use-responsive.ts  user-identity.ts  websocket-client.ts
frontend/types/: folders.ts  html2pdf.js.d.ts  trace.ts
scripts/: docker_compose_with_mounts.sh  start_api.sh  start_front.sh  vllm_embedding.sh
scripts/nginx/: nginx.conf
(+143 files in other folders)
